# superstitchous2.0

./: .gitattributes  .gitignore  README.md
src/: CMakeLists.txt  common.cpp  common.hpp  exportme  fetcher.cpp  fetcher.hpp  lrucache.hpp  lsqr_int.cpp  lsqr_int.hpp  main.cpp  optimize.cpp  optimize.hpp  proc.cpp  stitch.cpp  stitch.hpp  tiffint.cpp  tiffint.hpp  timeslice.hpp  translate.cpp  translate.hpp
testdata/celldata/: 0_0_0_0_SLIM.tif  0_0_0_10_SLIM.tif  0_0_0_11_SLIM.tif  0_0_0_12_SLIM.tif  0_0_0_13_SLIM.tif  0_0_0_14_SLIM.tif  0_0_0_15_SLIM.tif  0_0_0_1_SLIM.tif  0_0_0_2_SLIM.tif  0_0_0_3_SLIM.tif  0_0_0_4_SLIM.tif  0_0_0_5_SLIM.tif  0_0_0_6_SLIM.tif  0_0_0_7_SLIM.tif  0_0_0_8_SLIM.tif  0_0_0_9_SLIM.tif  makeposlist2.py  poslist_to_trackem2.py  test_list
testdata/four/: Fused.tif.REMOVED.git-id  TileConfiguration.registered.txt  TileConfiguration.txt  movedlist.poslist
vsproject/superstitchous2013/: superstitchous2013.sln
vsproject/superstitchous2013/fftw/dll/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
vsproject/superstitchous2013/libtiff/: libtiff.lib  libtiff_i.exp  libtiff_i.lib  libtiff_id.exp  libtiff_id.lib  libtiffd.lib
vsproject/superstitchous2013/segmentation/: segmentation.vcxproj  segmentation.vcxproj.filters
vsproject/superstitchous2013/stitching/: stitching.vcxproj  stitching.vcxproj.filters
vsproject/superstitchous2013/tminres/: Doxyfile.in  Mainpage.dox  Makefile  Operator_trait.hpp  README  Vector_trait.hpp  do-release.sh  tminres.hpp
vsproject/superstitchous2013/tminres/Cuda/: CudaOperator.cu  (+6 more)
zoomify/: zoomifystub.htm
(+32 files in other folders)
